Add missing in python and ruby.

--- a/python/Makefile
+++ b/python/Makefile
@@ -1,4 +1,9 @@
 PROJECT = hello_world
+WORKDIR = /opt/app
+DOCKER_IMAGE = python
 
 run:
 	PYTHONPATH=./src/ python -m ${PROJECT}
+
+bash:
+	docker run -v ${PWD}:${WORKDIR} -w ${WORKDIR} -it ${DOCKER_IMAGE} bash
