--- a/ruby/Makefile
+++ b/ruby/Makefile
@@ -1,4 +1,9 @@
 PROJECT = main
+WORKDIR = /opt/app
+DOCKER_IMAGE = ruby
 
 run:
 	ruby ${PROJECT}.rb
+
+bash:
+	docker run -v ${PWD}:${WORKDIR} -w ${WORKDIR} -it ${DOCKER_IMAGE} bash
