--- a/python/Makefile
+++ b/python/Makefile
@@ -5,5 +5,8 @@ DOCKER_IMAGE = python
 run:
 	PYTHONPATH=./src/ python -m ${PROJECT}
 
+clean:
+	rm -r src/hello_world/__pycache__/
+
 bash:
 	docker run -v ${PWD}:${WORKDIR} -w ${WORKDIR} -it ${DOCKER_IMAGE} bash
